changes on the footerlinks

--- a/index.html
+++ b/index.html
@@ -1132,7 +1132,7 @@
                                                     </div>
                                                     <h3 class="tabs-content__experience-title">We have over 6 years of
                                                         experience</h3>
-                                                    <a href="about" class="tabs-content__experience-btn">Read
+                                                    <a href="pages/about" class="tabs-content__experience-btn">Read
                                                         More</a>
                                                 </div>
                                                 <div class="tabs-content__experience-img">
@@ -1184,7 +1184,7 @@
                                                     </div>
                                                     <h3 class="tabs-content__experience-title">We have over 6 years of
                                                         experience</h3>
-                                                    <a href="about" class="tabs-content__experience-btn">Read
+                                                    <a href="pages/about" class="tabs-content__experience-btn">Read
                                                         More</a>
                                                 </div>
                                                 <div class="tabs-content__experience-img">
@@ -1302,11 +1302,11 @@
                                 <div class="footer-widget__column footer-widget__links clearfix">
                                     <h3 class="footer-widget__title">Links</h3>
                                     <ul class="footer-widget__links-list list-unstyled clearfix">
-                                        <li><a href="about">About Us</a></li>
-                                        <li><a href="about">Our Mission</a></li>
-                                        <li><a href="team">Meet the Team</a></li>
-                                        <li><a href="project">Our Projects</a></li>
-                                        <li><a href="contact">Contact</a></li>
+                                        <li><a href="pages/about">About Us</a></li>
+                                        <li><a href="pages/about">Our Mission</a></li>
+                                        <li><a href="pages/team">Meet the Team</a></li>
+                                        <li><a href="pages/project">Our Projects</a></li>
+                                        <li><a href="pages/contact">Contact</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -1353,8 +1353,8 @@
                                     </div>
                                     <div class="site-footer__bottom-right">
                                         <ul class="list-unstyled site-footer__bottom-menu">
-                                            <li><a href="about">Terms & Conditions</a></li>
-                                            <li><a href="about">Privacy Policy</a></li>
+                                            <li><a href="pages/about">Terms & Conditions</a></li>
+                                            <li><a href="pages/about">Privacy Policy</a></li>
                                         </ul>
                                     </div>
                                 </div>
