--- a/pages/project.html
+++ b/pages/project.html
@@ -183,8 +183,8 @@
                             <div class="project-one__img">
                                 <img src="../assets/images/resources/project-page-img-1.jpg" alt="">
                                 <div class="project-one__hover">
-                                    <p class="project-one__tagline">Graphic</p>
-                                    <h3 class="project-one__title"><a href="#">Fimlor Experience</a>
+                                    <p class="project-one__tagline">Installation</p>
+                                    <h3 class="project-one__title"><a href="#">Solar Panel</a>
                                     </h3>
                                 </div>
                             </div>
@@ -196,8 +196,8 @@
                             <div class="project-one__img">
                                 <img src="../assets/images/resources/project-page-img-2.jpg" alt="">
                                 <div class="project-one__hover">
-                                    <p class="project-one__tagline">Graphic</p>
-                                    <h3 class="project-one__title"><a href="#">Fimlor Experience</a>
+                                    <p class="project-one__tagline">Installation</p>
+                                    <h3 class="project-one__title"><a href="#">Cabling & Racking</a>
                                     </h3>
                                 </div>
                             </div>
@@ -209,8 +209,8 @@
                             <div class="project-one__img">
                                 <img src="../assets/images/resources/project-page-img-3.jpg" alt="">
                                 <div class="project-one__hover">
-                                    <p class="project-one__tagline">Graphic</p>
-                                    <h3 class="project-one__title"><a href="#">Fimlor Experience</a>
+                                    <p class="project-one__tagline">Installation & Suppler</p>
+                                    <h3 class="project-one__title"><a href="#">IoTs</a>
                                     </h3>
                                 </div>
                             </div>
@@ -222,8 +222,8 @@
                             <div class="project-one__img">
                                 <img src="../assets/images/resources/project-page-img-4.jpg" alt="">
                                 <div class="project-one__hover">
-                                    <p class="project-one__tagline">Graphic</p>
-                                    <h3 class="project-one__title"><a href="#">Fimlor Experience</a>
+                                    <p class="project-one__tagline">Installation</p>
+                                    <h3 class="project-one__title"><a href="#">Internet & Wi-fi</a>
                                     </h3>
                                 </div>
                             </div>
@@ -235,8 +235,8 @@
                             <div class="project-one__img">
                                 <img src="../assets/images/resources/project-page-img-5.jpg" alt="">
                                 <div class="project-one__hover">
-                                    <p class="project-one__tagline">Graphic</p>
-                                    <h3 class="project-one__title"><a href="#">Fimlor Experience</a>
+                                    <p class="project-one__tagline">Designing</p>
+                                    <h3 class="project-one__title"><a href="#">website-development</a>
                                     </h3>
                                 </div>
                             </div>
@@ -248,8 +248,8 @@
                             <div class="project-one__img">
                                 <img src="../assets/images/resources/project-page-img-6.jpg" alt="">
                                 <div class="project-one__hover">
-                                    <p class="project-one__tagline">Graphic</p>
-                                    <h3 class="project-one__title"><a href="#">Fimlor Experience</a>
+                                    <p class="project-one__tagline">Installation</p>
+                                    <h3 class="project-one__title"><a href="#">IP Telephones</a>
                                     </h3>
                                 </div>
                             </div>
